join con tablas status y loan type, nuevo metodo get para listar applicantions filtradas por status id o loan type id

--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -28,6 +28,7 @@ routes:
   application:
     paths:
       application: "/api/v1/application"
+      applications: "/api/v1/applications"
 
 adapters:
   r2dbc:
