--- a/infrastructure/driven-adapters/rest-consumer/build.gradle
+++ b/infrastructure/driven-adapters/rest-consumer/build.gradle
@@ -9,7 +9,10 @@ dependencies {
     implementation "org.mapstruct:mapstruct:$mapstructVersion"
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
 
-    testImplementation 'com.squareup.okhttp3:okhttp:5.1.0'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:5.1.0'
+    testImplementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.17'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.17'
+
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
     testImplementation "org.mapstruct:mapstruct:$mapstructVersion"
 }
