--- a/main.gradle
+++ b/main.gradle
@@ -28,6 +28,7 @@ subprojects {
   }
 
   dependencies {
+		implementation platform('software.amazon.awssdk:bom:2.32.13')
     implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     implementation 'io.projectreactor:reactor-core'
     implementation 'io.projectreactor.addons:reactor-extra'
