--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
+	implementation project(':sqs-listener')
 	implementation project(':sqs-sender')
 	implementation project(':metrics')
 	implementation project(':rest-consumer')
@@ -11,6 +12,8 @@ dependencies {
   implementation project(':model')
   implementation project(':usecase')
   implementation 'org.springframework.boot:spring-boot-starter'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
+  implementation 'io.micrometer:micrometer-registry-prometheus'
   runtimeOnly('org.springframework.boot:spring-boot-devtools')
   testImplementation 'com.tngtech.archunit:archunit:1.4.1'
   testImplementation 'com.fasterxml.jackson.core:jackson-databind'
