envio prestamo aprobado a cola sqs

--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -49,6 +49,7 @@ adapter:
     queues:
       validation-queue: "${QUEUE_URL_VALIDATION}"
       notification-queue: "${QUEUE_URL_NOTIFICATION}"
+      report-queue: "${QUEUE_URL_REPORT}"
     region: "us-east-1"
 
 entrypoint:
