--- a/infrastructure/driven-adapters/r2dbc-postgresql/build.gradle
+++ b/infrastructure/driven-adapters/r2dbc-postgresql/build.gradle
@@ -6,6 +6,7 @@ dependencies {
   implementation 'jakarta.persistence:jakarta.persistence-api'
   implementation 'org.postgresql:r2dbc-postgresql'
   implementation 'org.reactivecommons.utils:object-mapper-api:0.1.0'
+  implementation 'com.github.bancolombia:aws-secrets-manager-async:4.4.34'
 
   testImplementation 'org.reactivecommons.utils:object-mapper:0.1.0'
 }
