--- a/infrastructure/driven-adapters/rest-consumer/build.gradle
+++ b/infrastructure/driven-adapters/rest-consumer/build.gradle
@@ -8,11 +8,11 @@ dependencies {
     implementation 'io.micrometer:micrometer-core'
     implementation "org.mapstruct:mapstruct:$mapstructVersion"
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
+    implementation 'com.github.bancolombia:aws-secrets-manager-async:4.4.34'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
 
     testImplementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.17'
     testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.17'
-
-    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    implementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
     testImplementation "org.mapstruct:mapstruct:$mapstructVersion"
 }
