--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation "org.springframework:spring-tx:$txVersion"
     implementation "org.springdoc:springdoc-openapi-starter-webflux-ui:$openApiVersion"
     implementation "com.google.code.gson:gson:$gsonVersion"
+    implementation 'com.github.bancolombia:aws-secrets-manager-async:4.4.34'
 
     testImplementation "org.mapstruct:mapstruct:$mapstructVersion"
     testImplementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
