--- a/serverless.yaml
+++ b/serverless.yaml
@@ -207,7 +207,7 @@ resources:
       Properties:
         Name: ${self:custom.adminCredentialsSecretName}
         Description: "Admin credentials for Application API"
-        SecretString: !Sub '{"ADMIN_EMAIL": "dummy@example.com", "ADMIN_PASSWORD": "dummy-password"}'
+        SecretString: !Sub '{"ADMIN_EMAIL": "roberto.admin@gmail.com", "ADMIN_PASSWORD": "Pass_1234"}'
 
     DBInstance:
       Type: AWS::RDS::DBInstance
@@ -322,6 +322,13 @@ resources:
         Type: String
         Value: !GetAtt ListenerQueue.Arn
 
+    AdminCredentialsSecretArnSsm:
+      Type: AWS::SSM::Parameter
+      Properties:
+        Name: /creadiya/application-api/admin-credentials-secret-arn/${self:provider.stage}
+        Type: String
+        Value: !Ref AdminCredentialsSecret
+
 
 
     # ------------------------------------------------------------
@@ -401,8 +408,8 @@ resources:
         Family: ${self:service}-task
         NetworkMode: awsvpc
         RequiresCompatibilities: [FARGATE]
-        Cpu: "256"
-        Memory: "512"
+        Cpu: "512"
+        Memory: "1024"
         ExecutionRoleArn: !Ref ECSTaskExecutionRole
         TaskRoleArn: !Ref ECSTaskRole
         ContainerDefinitions:
@@ -463,7 +470,7 @@ resources:
         Cluster: !Ref ECSCluster
         TaskDefinition: !Ref TaskDefinition
         LaunchType: FARGATE
-        DesiredCount: 1
+        DesiredCount: 2
         EnableExecuteCommand: true
         NetworkConfiguration:
           AwsvpcConfiguration:
@@ -521,7 +528,7 @@ resources:
         ProtocolType: HTTP
         CorsConfiguration:
           AllowOrigins: ['*']
-          AllowMethods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
+          AllowMethods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS', 'PATCH']
           AllowHeaders: ['Content-Type', 'Authorization']
 
     VpcLink:
